--- a/presence_sim/web/index.html
+++ b/presence_sim/web/index.html
@@ -11,16 +11,27 @@
 
     <script>
       async function loadEntities() {
-        const res = await fetch("api/entities");
-        const entities = await res.json();
-        const select = document.getElementById("entities");
+        fetch("api/entities")
+          .then((r) => r.json())
+          .then((entities) => {
+            if (!Array.isArray(entities)) {
+              console.error("Ungültige Entity-Liste:", entities);
+              return;
+            }
 
-        entities.forEach((e) => {
-          const opt = document.createElement("option");
-          opt.value = e.id;
-          opt.textContent = e.name;
-          select.appendChild(opt);
-        });
+            const sel = document.getElementById("entities");
+            sel.innerHTML = "";
+
+            entities.forEach((e) => {
+              const opt = document.createElement("option");
+              opt.value = e.id;
+              opt.textContent = e.name;
+              sel.appendChild(opt);
+            });
+          })
+          .catch((err) => {
+            console.error("Entity Load Error:", err);
+          });
       }
       loadEntities();
     </script>
