--- a/presence_sim/web/index.html
+++ b/presence_sim/web/index.html
@@ -62,7 +62,7 @@
       </thead>
       <tbody id="history"></tbody>
     </table>
-    <div style="display: hidden">
+    <div style="visibility: hidden">
       <h3>Balken-Timeline</h3>
       <div id="timeline"></div>
       <h3>Heatmap (Aktivitätsdichte)</h3>
